# arxml-analyzer

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  validate_arxml.py
arxml_analyzer/analyzers/: __init__.py  bsw_analyzer.py  communication_analyzer.py  diagnostic_analyzer.py  ecuc_analyzer.py  gateway_analyzer.py  interface_analyzer.py  mcal_analyzer.py  swc_analyzer.py
arxml_analyzer/cli/: __init__.py  main.py
arxml_analyzer/core/: comparator.py
arxml_analyzer/core/analyzer/: base_analyzer.py  configurable_analyzer.py  cross_reference_analyzer.py  pattern_finder.py  type_detector.py
arxml_analyzer/core/parser/: __init__.py  xml_parser.py
arxml_analyzer/core/profiler/: __init__.py  document_profiler.py
arxml_analyzer/core/validator/: __init__.py  base_validator.py  composite_validator.py  reference_validator.py  rule_validator.py  schema_validator.py
arxml_analyzer/models/: arxml_document.py
arxml_analyzer/utils/: exceptions.py
data/: README.md  test_compare1.arxml  test_compare2.arxml  test_validate.arxml
data/official/ecuc/: CanIf_Ecuc.arxml  Os_Ecuc.arxml
docs/: IMPLEMENTATION.md  REFACTORING_PLAN.md  REQUIREMENTS.md  TODO.md
src/arxml_analyzer/: __init__.py
tests/integration/: test_cli.py  test_cli_real_data.py  test_performance.py
tests/unit/: test_base_analyzer.py  test_bsw_analyzer.py  test_communication_analyzer.py  test_diagnostic_analyzer.py  test_document_profiler.py  test_ecuc_analyzer.py  test_formatters.py  test_gateway_analyzer.py  test_interface_analyzer.py  test_swc_analyzer.py
(+19 files in other folders)
